LWCLearnwithFLOWOrg/force-app/main/default/objects/Outreach_Sequence__c/Outreach_Sequence__c.object-meta.xml
<CustomObject>
    <label>Outreach Sequence</label>
    <nameField>
        <displayFormat>OS-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outreach Sequences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>