LWCLearnwithFLOWOrg/force-app/main/default/objects/Outreach_Sequence__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Outreach Sequences</relationshipLabel>
    <relationshipName>Outreach_Sequences</relationshipName>
    <type>Lookup</type>
</CustomField>