LWCLearnwithFLOWOrg/force-app/main/default/objects/Outreach_Sequence__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Outreach Sequences</relationshipLabel>
    <relationshipName>Outreach_Sequences</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>