LWCLearnwithFLOWOrg/force-app/main/default/objects/Outreach_Sequence__c/fields/CS_Sequence_Id__c.field-meta.xml
<CustomField>
    <fullName>CS_Sequence_Id__c</fullName>
    <label>CS Sequence Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>