LWCLearnwithFLOWOrg/force-app/main/default/objects/Outreach_Sequence__c/fields/Sequence_Id__c.field-meta.xml
<CustomField>
    <fullName>Sequence_Id__c</fullName>
    <label>Sequence Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>