LWCLearnwithFLOWOrg/force-app/main/default/objects/Outreach_Sequence__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <inlineHelpText>https://support.outreach.io/hc/en-us/articles/211861917</inlineHelpText>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Paused</fullName>
            </value>
            <value>
                <fullName>Paused OOTO</fullName>
            </value>
            <value>
                <fullName>Disabled</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Bounced</fullName>
            </value>
            <value>
                <fullName>Finished (No Reply)</fullName>
            </value>
            <value>
                <fullName>Finished (Replied)</fullName>
            </value>
            <value>
                <fullName>Opted-Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>